...
    <!-- Moon  	-->
    <RelativeLayout
        android:id="@+id/linearLayoutHaut"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
...

        <TextView
            android:id="@+id/textCoucher"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
...

        <TextView
            android:id="@+id/textLever"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
...

        <TextView
            android:id="@+id/textPct"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
...

        <ImageView
            android:id="@+id/imgNote"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
...

        <TextView
            android:id="@+id/TextJour"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
...

        <TextView
            android:id="@+id/textCroissant"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
...

        <TextView
            android:id="@+id/textHCD"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center_vertical|center_horizontal"
            android:text="00:00"
            android:textColor="#666666"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/textDecroissant"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
...

        <TextView
            android:id="@+id/textMontant"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
...

        <TextView
            android:id="@+id/textHMD"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
...

        <TextView
            android:id="@+id/textDescendant"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
...

        <TextView
            android:id="@+id/textFeuilles"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
...

        <TextView
            android:id="@+id/textFruits"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
...

        <TextView
            android:id="@+id/textRacines"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
...

        <TextView
            android:id="@+id/textFleurs"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
...

            <TextView
                android:id="@+id/textPerigeeHour"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
...

            <TextView
                android:id="@+id/textPerigee"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
...

            <TextView
                android:id="@+id/textApogeeHour"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
...

            <TextView
                android:id="@+id/textApogee"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
...

            <TextView
                android:id="@+id/textNoeudHour"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
...

            <TextView
                android:id="@+id/textNoeud"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
...
