<?xml version="1.0" encoding="utf-8"?>
<resources xmlns:tools="http://schemas.android.com/tools" tools:ignore="MissingTranslation">
    <string name="hello">Hello World, Lunoid!</string>
    <string name="app_name">LUNOID</string>
    <string name="app_author" translatable="false">Michel Nialon</string>
    <string name="app_date" translatable="false">03/12/2024</string>
    <string name="app_descr">Moon calendar 2025</string>
    <string name="apogee">Apogee</string>
    <string name="perigee">Perigee</string>
    <string name="noeudlunaire">Node</string>
    <string name="fleurs">Flowers</string>
    <string name="fruits">Fruits</string>
    <string name="racines">Roots</string>
    <string name="feuilles">Leaves</string>
    <string name="montant">Rising</string>
    <string name="descendant">Descending</string>
    <string name="croissant">Waxing</string>
    <string name="decroissant">Waning</string>
    <string name="NL">NL </string>
    <string name="PQ">PQ </string>
    <string name="PL">PL </string>
    <string name="DQ">DQ </string>
    <string name="desc">Moon</string>
    <string name="vide" />
    <string name="nodata">&lt;&lt;No data&gt;&gt;</string>
    <string name="apropos">About</string>
    <string name="lever">Rise</string>
    <string name="coucher">Set</string>
    <string name="ok">OK</string>
    <string name="info1">Definitions</string>
    <string name="info2">Rising/descending moon</string>
    <string name="info3">The moon is rising when it is higher in the sky from one day to next day.</string>
    <string name="info4">Waxing/waning moon</string>
    <string name="info5">The moon is waxing when it is bigger from one day to the next.</string>
    <string name="info6">Apogee</string>
    <string name="info7">The moon is at the apogee when it is at the farest from the earth.</string>
    <string name="info8">Perigee</string>
    <string name="info9">The moon is at the perigee when it is at the closest from the earth.</string>
    <string name="info10">Node</string>
    <string name="info11">A node happens when the moon crosses the apparent path of the sun around the earth.</string>
    <string name="info12">Bad influence days</string>
    <string name="info13">Apogee, perigee and nodes are bad for the cultures. They are marked as red.</string>
    <string name="info14">Flowers days</string>
    <string name="info15">Period to favour for culture of : cauliflower, artichoke, broccoli.</string>
    <string name="info16">Fruits days</string>
    <string name="info17">Periode to favour for culture of : tomatoes, cucumbers.</string>
    <string name="info18">Roots days</string>
    <string name="info19">Period to favour for the culture of : potatoes, carrots.</string>
    <string name="info20">Leaves days</string>
    <string name="info21">Period to favour for the culture of : lettuce, sorrel, parsley.</string>
    <string name="info22">Features</string>
    <string name="info23">Uses calendar to move from one day another.</string>
    <string name="info24">To select current day, touch the date in clear text.</string>
    <string name="info25">Hours are displayed in UTC or local time depending on parameter.</string>
    <string name="info26">Gibbous moon</string>
    <string name="info27">The moon is gibbous when the visible part is bigger than the non visible one. That is, either between first quarter and full moon or full moon and last quarter.</string>
    <string name="info28">Red moon</string>
    <string name="info29">The red moon is the first lunar month after Easter sunday.</string>
    <string name="info30">To find a specific type of day, flower, waxing&#8230;, click one time on its name.</string>
    <string name="info31">Hints</string>
    <string name="info32">Sow in rising moon.</string>
    <string name="info33">Harvest flowers, fruits and leaves vegetables in rising moon.</string>
    <string name="info34">Plant in descending moon.</string>
    <string name="info35">Prepare the ground (digging, fertilizing) in descending moon.</string>
    <string name="info36">Take cuttings in descending moon.</string>
    <string name="info37">Harvest roots vegetables in descending moon.</string>
    <string name="info38">Blue moon</string>
    <string name="info39">The blue moon is the second full moon in the same month.</string>
    <string name="infos">Infos</string>
    <string name="notfound">Not found</string>
    <string name="params">Parameters</string>
    <string name="fuseau">Display</string>
    <string name="fuseaufrance">Local time</string>
    <string name="heurenoeud">Display node hour</string>
    <string name="heureapogee">Display apogee hour</string>
    <string name="heureperigee">Display perigee hour</string>
    <string name="heuredetail">With/without hour</string>
    <string name="localeGMT">Local time or UTC</string>
    <string name="don">Make a donation</string>
    <string name="infosmois">Show information for the full month</string>
    <string name="infosmoistitre">Info for the full month</string>
    <string name="app_email" translatable="false">mnialon@gmail.com</string>
    <string name="share">Share this application</string>
    <string name="check_version">Check if a new version is available</string>
    <string name="comment">Send a comment or suggestion</string>
    <string name="display_advices">Display the advices for the day</string>
    <string name="title_activity_edit_note">Edit Note</string>
    <string name="notedu">Note for</string>
    <string name="sauvegarder">Save</string>
    <string name="notesauvegardee">The note has been saved</string>
    <string name="annuler">Cancel</string>
    <string name="notenonsauvegardee">The note has not been saved</string>
    <string name="nepasjardineravant">Do not work before</string>
    <string name="nepasjardinerapres">Do not work after</string>
    <string name="nepasjardinerentre">Do not work between</string>
    <string name="lng_infos">Language for the information</string>
    <string name="lng_infos_choice">Select the language</string>
    <string name="noeudascendanta">Ascending node at</string>
    <string name="noeuddescendanta">Descending node at</string>
    <string name="perigeea">Perigee at</string>
    <string name="apogeea">Apogee at</string>
    <string name="h0" translatable="false">00:00</string>
    <string name="sharemessage">You will like this Android application (Gardening according to the moon)</string>
    <string name="rappel">Reminder</string>
    <string name="setreminder">Schedule a reminder</string>
    <string name="notesupprimee">The note has been deleted</string>
    <string name="hemititle">South hemisphere</string>
    <string name="hemisummary">To invert ascending/descending. (Application needs to be restarted when changed)</string>
    <string name="listNotes">List of notes</string>
    <string name="review">Review</string>
    <string name="position">Position</string>
    <string name="latitude">Latitude</string>
    <string name="longitude">Longitude</string>
    <string name="pardefaut">Standard (France-Center)</string>
    <string name="Pisces">Pisces</string>
    <string name="Scorpio">Scorpio</string>
    <string name="Cancer">Cancer</string>
    <string name="Sagittarius">Sagittariuis</string>
    <string name="Leo">Leo</string>
    <string name="Aries">Aries</string>
    <string name="Capricorn">Capricorn</string>
    <string name="Virgo">Virgo</string>
    <string name="Taurus">Taurus</string>
    <string name="Aquarius">Aquarius</string>
    <string name="Gemini">Gemini</string>
    <string name="Libra">Libra</string>
    <string name="dispzodiac">Display zodiac signs</string>
    <string name="icons">Icons</string>
    <string name="texts">Texts</string>
    <string name="informations">Informations</string>
    <string name="citypref">Position (For the calculation of rise and set time)</string>
    <string name="saveNotes">Save/Share notes</string>
    <string name="pleaseUpgrade">Please upgrade to the latest version.</string>
    <string name="neplusaff">Do not display help anymore</string>
    <string name="prev">Previous</string>
    <string name="next">Next</string>
    <string name="finish">End</string>
    <string name="dispcroidec" />
    <string name="pleinelune">Full moon</string>
    <string name="nouvellelune">New moon</string>
    <string name="dispjoursyn">Day of synodical revolution</string>
    <string name="dispjoursyndesc">Day number in the up/down cycle (Replaces percentage of illumination)</string>
    <string name="bgprefs">Background</string>
    <string name="vuemensuelle">Monthly view</string>
</resources>
