...

            <TextView
                android:id="@+id/lever"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:text="--:--"
                android:textColor="#aff2ea"
                android:textSize="14dp"
                android:typeface="monospace" />

            <TextView
                android:id="@+id/coucher"
...
